Made some changes

--- a/08-Practise.html
+++ b/08-Practise.html
@@ -9,11 +9,11 @@
     <script>
         const name = {
             name1: "sonis",
-            name2: "deepti",
-            name3: "anisha"
+            name2: "durgesh",
+            name3: "Kaushal"
         }
         console.log(name);
-        name.name1 = "rupali";
+        name.name1 = "sagar";
         console.log(name);
         // as object points to the reference therefore there is no effect when we change the value having const object
         const user = name;
